使用 Colaboratory 建立

--- a/NMA_code 20230809.ipynb
+++ b/NMA_code 20230809.ipynb
@@ -10,6 +10,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Code from Chin-Chieh Wu (Chang Gung University)"
+      ],
+      "metadata": {
+        "id": "KDIhsE_3-l5H"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Install the renv package if not already installed\n",
@@ -31,7 +40,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -86,7 +95,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -558,7 +567,7 @@
         "id": "PDkcr3W-ZWwk",
         "outputId": "f149c7ea-5737-4cd4-f8fc-e53871aba1fe"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -596,6 +605,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "QRECUXKl92mN"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
